--- a/MIDTERMPETA-main/camille.html
+++ b/MIDTERMPETA-main/camille.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>4HEDS - Camille</title>
+  <title>Cell Membrane</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -49,17 +49,17 @@ footer a {
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid px-4">
-        <a class="navbar-brand" href="index.html">4HEDS</a>
+        <a class="navbar-brand" href="index.html">Biology</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item me-1"><a class="nav-link" href="newindex.html">About Us</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Camille</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Iris Lewy</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Andrey Maben</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Zane Ivan</a></li>
+               <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholid Bilayer</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Cholesterols</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Membrane Proteins</a></li>
             </ul>
         </div>
     </div>
@@ -69,8 +69,8 @@ footer a {
 <!-- Main Heading -->
 <section class="hero">
   <div class="container">
-    <h1 class="display-4 fw-bold">4HEDS</h1>
-    <p class="lead">Camille</p>
+    <h1 class="display-4 fw-bold">Cell Membrane</h1>
+    <p class="lead">4headsbiology</p>
   </div>
 </section>
 
@@ -90,29 +90,29 @@ footer a {
     <!-- Carousel Items -->
     <div class="carousel-inner bg-dark" style="height: 80vh;">
       <div class="carousel-item active">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/elliepic1.jpg" class="img-fluid" alt="CamilleSelfie#1" style="max-height: 100%; object-fit: contain;">
+        <div class="d-flex justify-content-center align-items-center">
+          <img src="Pictures/plasma.jpg" class="img-fluid w-100 h-100" alt="Plasma" style="object-fit: contain; max-width: 100%; max-height: 100%;">
         </div>
       </div>
       <!-- Repeat other slides... -->
       <div class="carousel-item">
         <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/elliepic2.jpg" class="img-fluid" alt="CamilleSelfie#2" style="max-height: 100%; object-fit: contain;">
+            <img src="Pictures/plasma1.jpg" class="img-fluid w-100 h-100" alt="Plasma" style="object-fit: contain; max-width: 100%; max-height: 100%; margin-top: 100px;">
         </div>
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/elliepic3.jpg" class="img-fluid" alt="CamilleSelfie#3" style="max-height: 100%; object-fit: contain;">
+          <img src="Pictures/plasma3.jpg" class="img-fluid w-100 h-100" alt="Plasma" style="object-fit: contain; max-width: 100%; max-height: 100%;">
         </div>
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/elliepic4.jpg" class="img-fluid" alt="CamilleSelfie#4" style="max-height: 100%; object-fit: contain;">
+          <img src="Pictures/Plasma2.jpg" class="img-fluid" alt="CamilleSelfie#4" style="max-height: 100%; object-fit: contain;">
         </div>
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/elliepic5.jpg" class="img-fluid" alt="CamilleSelfie#5" style="max-height: 100%; object-fit: contain;">
+          <img src="Pictures/PLASMA5.jpg" class="img-fluid" alt="CamilleSelfie#5" style="max-height: 100%; object-fit: contain;">
         </div>
       </div>
     </div>
@@ -131,12 +131,10 @@ footer a {
 
 <!-- Heading and Subheading -->
 <section class="text-center my-2">
-  <h2 class="h2 fw-bold" style="font-size: 2.5rem;">About Camille</h2>
+  <h2 class="h2 fw-bold" style="font-size: 2.5rem;">Cell Membrane</h2>
   <p class="text-muted fs-5 px-4" style="color: #FFD700; font-size: 1.5rem; padding: 20px; border-radius: 10px;"></p>
-  <span style="font-size: 1.8rem; font-weight: bold;">Howdy!</span> I am <span style="color: #FFA07A; font-weight: bold;">Camille C. Valladarez</span>, but my friends call me <span style="color: #87CEFA; font-style: italic;">Cams</span>/<span style="color: #DA70D6; font-style: italic;">Ellie</span>; anything will do. 
-  I usually <span style="color: #98FB98; font-weight: bold;">play games</span> or <span style="color: #ADD8E6; font-weight: bold;">stream</span> during my free time, so stay tuned! 
-  My plan is to take a course in <span style="color: #AFEEEE; font-weight: bold;">BSIT</span> and make it abroad. 
-  In my early years, I was exposed to advanced technology, which made me fond of it and inspired my passion for innovation.
+  <span style="font-size: 1.8rem; font-weight: bold;">Hello!</span> I am <span style="color: #FFA07A; font-weight: bold;">The Cell Membrane</span>, but my friends call me <span style="color: #87CEFA; font-style: italic;">Plasma Membrane</span>; anything will do. 
+   It's a thin, flexible structure made primarily of a phospholipid bilayer, with proteins and carbohydrates embedded within. This structure gives the membrane its semi-permeable nature, allowing the cell to regulate what enters and exits while maintaining a stable internal environment. 
   </p>
 </section>
 <br>
@@ -149,23 +147,23 @@ footer a {
     <div class="col">
       <div class="card-custom text-center">
         <div class="d-flex align-items-center justify-content-center rounded" style="width: 300px; height: 200px; background: none;">
-          <img src="Pictures/officer1.jpg" alt="Camilleofficer#1" style="max-height: 300px; object-fit: cover; margin-top: 125px; margin-left: 65px;"> </div>
+          <img src="Pictures/gif22.gif" alt="Camilleofficer#1" style="max-height: 150px; object-fit: cover; margin-top: 125px; margin-left: 65px;"> </div>
       </div>
     </div>
     <div class="col">
       <div class="card-custom text-center">
         <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">໒꒱┈•  ｡ﾟ Credentials ｡ﾟ•┈꒰ა</h5>
+        <h5 class="fw-bold">໒꒱┈•  ｡ﾟ Functions ｡ﾟ•┈꒰ა</h5>
         <p class="text-muted mt-2">
             <ul class="text-start">
-            <li>2024-2025 Class Representative </li>
-            <li>2023-2024 YECS President</li>
-            <li>2023-2024 BHS Teakwondo President</li>
-            <li>2023-2024 Class Business Manager</li>
-            <li>2022-2023 Class Sgt. & Arms</li>
-            <li>NCR PALARO ATHLETE 2019</li>
-            <li>DIVISION MEET</li>
-            <li>Grade 5 Sgt. & Arms</li>
+            <li>Permeability</li>
+            <li>Signal Reception</li>
+            <li>Motility Conduction</li>
+            <li>Cell Division</li>
+            <li>Sexual Reproduction</li>
+            <li>Homeostasis</li>
+            <li>Transport</li>
+            <li>Cell Adhesion</li>
             </ul>
         </p>
       </div>
@@ -173,7 +171,7 @@ footer a {
     <div class="col">
       <div class="card-custom text-center">
       <div class="d-flex align-items-center justify-content-center rounded" style="width: 300px; height: 200px;">
-        <img src="Pictures/win1.jpg" alt="Camillewin#1" style="width: 100%; height: 100%; object-fit: cover; max-height: 200px; margin-top: 100px; margin-left: 50px;"> 
+        <img src="Pictures/gif33.gif" alt="Plasma" style="width: 100%; height: 100%; object-fit: cover; max-height: 200px; margin-top: 100px; margin-left: 50px;"> 
       </div>
       </div>
     </div>
@@ -185,17 +183,17 @@ footer a {
       <div class="card-custom text-center">
           <br>
           <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
-          <iframe src="https://online.fliphtml5.com/vbiia/yxwm/?p=1" width="100%" height="600" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-          <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p> 
+          <div class="d-flex justify-content-center">
+            <iframe src="https://www.youtube.com/embed/qBCVVszQQNs" title="Inside the Cell Membrane" width="100%" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width:100%;"></iframe>
+          </div>
+          <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
         </div>
       </div>
     <div class="col">
       <div class="card-custom text-center">
-        <h2 class="fw-bold mb-3">Favorite Books</h2>
+        <h2 class="fw-bold mb-3">More About The Cell Membrane</h2>
         <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
-        <iframe src="https://drive.google.com/file/d/1lW2KUwroZ9-AGzXQ1mDJcH9osUaq1deV/preview"
-        width="100%" height="600"
-        frameborder="0" allow="autoplay"></iframe>
+            <iframe src="https://youtube.com/embed/SsFqmYATM3k" title="Inside the Cell Membrane" width="100%" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width:100%;"></iframe>
         <br>
         <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
       </div>
@@ -203,7 +201,7 @@ footer a {
     <div class="col">
       <div class="card-custom text-center">
         <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
-        <iframe src="https://online.fliphtml5.com/ckbmi/oyhh/" width="100%" height="600" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <iframe src="https://www.youtube.com/embed/wLyrXCLH46M" title="Inside the Cell Membrane" width="100%" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width:100%;"></iframe>
         <p>₊˚ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚₊˚₊ ✧ ━━━━⊱⋆⊰━━━━ ✧ ₊˚</p>
       </div>
     </div>
@@ -215,10 +213,10 @@ footer a {
   <div class="row justify-content-center">
   <div class="col-12">
     <div class="card-custom text-center p-4">
-    <h5 class="fw-bold">Current Favorite Song</h5>
+    <h5 class="fw-bold">Song About Me?</h5>
     <iframe
       style="border-radius:12px"
-      style="border-radius:12px" src="https://open.spotify.com/embed/track/2cKEla5yiK5J6XVeMv9nEo?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    </iframe>
+      style="border-radius:12px" src="https://open.spotify.com/embed/track/2H8Hzc66OtIKUKY1YBJt4F?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    </iframe>
     </div>
   </div>
   </div>
@@ -227,131 +225,10 @@ footer a {
 </div>
 </section>
 
-<!-- Experiences -->
-<div class="container my-2">
-  <div class="card-custom text-center p-4">
-    <h5 class="fw-bold">໒꒱┈•  ｡ﾟ Experiences ｡ﾟ•┈꒰ა</h5>
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
-      <div class="col text-center">
-        <i class="fa-brands fa-java" style="font-size: 48px; color: #f89820;"></i>
-        <p>Java Programming</p>
-      </div>
-      <div class="col text-center">
-        <i class="fa-brands fa-python" style="font-size: 48px; color: #3776AB;"></i>
-        <p>Python Programming</p>
-      </div>
-      <div class="col text-center">
-        <i class="fa-brands fa-css3" style="font-size: 48px; color: #1572B6;"></i>
-        <p>CSS3 Programming</p>
-      </div>
-      <div class="col text-center">
-        <i class="fa-brands fa-html5" style="font-size: 48px; color: #E34F26;"></i>
-        <p>HTML5 Programming</p>
-      </div>
-      <div class="col text-center">
-        <i class="fa-brands fa-js" style="font-size: 48px; color: #F7DF1E;"></i>
-        <p>JavaScript Programming</p>
-      </div>
-      <div class="col text-center">
-        <i class="fa-brands fa-bootstrap" style="font-size: 48px; color: #7952B3;"></i>
-        <p>Bootstrap Programming</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- GitHub Repositories -->
-<div class="container my-2">
-  <div class="card-custom text-center p-4">
-    <h5 class="fw-bold">໒꒱┈•  ｡ﾟ My Github Repositories ｡ﾟ•┈꒰ა</h5>
-    <a href="https://github.com/ElEllieElie?tab=repositories" target="_blank" class="btn btn-dark mt-3">
-      <i class="fa-brands fa-github me-2"></i>View Repositories
-    </a>
-  </div>
-</div>
-
-<!-- Socials -->
-<div class="container my-2">
-  <div class="card-custom text-center p-4">
-    <h5 class="fw-bold text-white">໒꒱┈•  ｡ﾟ Socials ｡ﾟ•┈꒰ა</h5>
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
-      <div class="col text-center">
-        <a href="https://www.facebook.com/camille.c.valladarez" target="_blank" class="text-decoration-none text-white">
-          <i class="fa-brands fa-facebook" style="font-size: 48px; color: #1877F2;"></i>
-          <p style="color: white;">Camille C. Valladarez</p>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://www.instagram.com/camel.the.kamel/" target="_blank" class="text-decoration-none text-white">
-          <i class="fa-brands fa-instagram" style="font-size: 48px; color: #E1306C;"></i>
-          <p style="color: white;">@camel.the.kamel</p>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://x.com/NotCasualEllie" target="_blank" class="text-decoration-none text-white"></a>
-          <i class="fa-brands fa-x-twitter" style="font-size: 48px; color: #000000;"></i>
-          <p>@NotCasualEllie</p>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="http://discordapp.com/users/507489279229034497" target="_blank" class="text-decoration-none text-white"></a>
-          <i class="fa-brands fa-discord" style="font-size: 48px; color: #5865F2;"></i>
-          <p>@elellie</p>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://www.linkedin.com/in/camille-valladarez-3a512932b/" target="_blank" class="text-decoration-none text-white"></a>
-          <i class="fa-brands fa-linkedin" style="font-size: 48px; color: #0A66C2;"></i>
-          <p>Camille Valladarez</p>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://open.spotify.com/user/31fkebofhmiks5qkdohpfki3xf6i" target="_blank" class="text-decoration-none text-white"></a>
-          <i class="fa-brands fa-spotify" style="font-size: 48px; color: #1DB954;"></i>
-          <p>Ellie</p>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Streaming Platforms -->
-<div class="container my-2">
-  <div class="card-custom text-center p-4">
-    <h5 class="fw-bold text-white">໒꒱┈•  ｡ﾟ Streaming Platforms ｡ﾟ•┈꒰ა</h5>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center mt-3">
-      <div class="col text-center">
-        <a href="https://www.tiktok.com/@caspianelliot?is_from_webapp=1&sender_device=pc" target="_blank" class="d-flex flex-column align-items-center text-decoration-none text-white">
-          <i class="fa-brands fa-tiktok" style="font-size: 48px; color:#010101;"></i>
-          <span>@caspianelliot</span>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://www.tiktok.com/@rizirizzler?is_from_webapp=1&sender_device=pc" target="_blank" class="d-flex flex-column align-items-center text-decoration-none text-white">
-          <i class="fa-brands fa-tiktok" style="font-size: 48px; color:#010101;"></i>
-          <span>@rizirizzler</span>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://www.twitch.tv/elellieelie" target="_blank" class="d-flex flex-column align-items-center text-decoration-none text-white">
-          <i class="fa-brands fa-twitch" style="font-size: 48px; color:#9146FF;"></i>
-          <span>@elellieelie</span>
-        </a>
-      </div>
-      <div class="col text-center">
-        <a href="https://www.youtube.com/@elellieplayz" target="_blank" class="d-flex flex-column align-items-center text-decoration-none text-white">
-          <i class="fa-brands fa-youtube" style="font-size: 48px; color:#FF0000;"></i>
-          <span>@elellieplayz</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-
 <!-- Footer -->
 <footer>
     <div class="container">
-      <p class="text-center mb-0">&copy; 2025 4HEDS. All Rights Reserved</p>
+      <p class="text-center mb-0">&copy; 2025 4HEDS' BIOLOGY. All Rights Reserved</p>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
